# prem_table_api

./: .flaskenv  .gitignore  README.md  api.py  api_helpers.py  data_check.py  pyproject.toml
api/: __init__.py  api_examples.py  api_helpers.py
data/: df_total.csv  wiki_scraping.py
examples/: example_usecase.py
other.py/: api_examples.py
prem_table_api/: __init__.py  example_usecase.py
tests/: test_get_endpoints.py
